Fix etc references

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -20,7 +20,7 @@ serverurl=unix:///tmp/supervisor.sock
 
 [program:icecast2]
 user=icecast2
-command=icecast2 -n -c /etc/icecast2/icecast.xml
+command=icecast2 -n -c /usr/share/icecast2/icecast.xml
 stopsignal=6
 stdout_events_enabled=true
 stderr_events_enabled=true
